# Turtlesim_football

./: CMakeLists.txt  README.md  package.xml
launch/: turtlesim_game_with_goalkeeper.launch  turtlesim_game_with_goalkeeper_cpp.launch  turtlesim_game_without_goalkeeper.launch  turtlesim_game_without_goalkeeper_cpp.launch
src/: prepare_environment_with_goalkeeper.cpp  prepare_environment_with_goalkeeper.py  prepare_environment_without_goalkeeper.cpp  prepare_environment_without_goalkeeper.py  turtlesim_football_run_with_goalkeeper.cpp  turtlesim_football_run_with_goalkeeper.py  turtlesim_football_run_without_goalkeeper.cpp  turtlesim_football_run_without_goalkeeper.py  turtlesim_teleop_key.py
